--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -9,7 +9,7 @@
                 <div class="col font-weight-500">Loan End Date</div>
                 <div class="col font-weight-500">Tenure</div>
                 <div class="col font-weight-500">Last Payment Date</div>
-                <div class="col-2 font-weight-500" [class.padding-left]="fullReleaseScreen">Principal Outstanding Amount
+                <div class="col-2 font-weight-500" [class.padding-left]="fullReleaseScreen">Principal Outstanding
                 </div>
                 <div class="col font-weight-500 " *ngIf="!fullReleaseScreen">
                     <kt-button [value]="'Full Release'" [type]="'button'" (click)="fullRelease()"></kt-button>
@@ -183,7 +183,7 @@
                                         <th class="transparent" style="width: 15%;">Net Weight</th>
                                         <!-- <th class="transparent">Previous LTV</th>
                                         <th class="transparent">Current LTV</th> -->
-                                        <th class="transparent table-padding-end">Principal Outstanding Amount
+                                        <th class="transparent table-padding-end">Principal Outstanding
 
                                         </th>
                                     </ng-container>
