--- a/gold-admin-frontend/src/app/views/pages/admin/settings/cron-list/cron-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/settings/cron-list/cron-list.component.html
@@ -37,6 +37,14 @@
                         </span>
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="message">
+                    <mat-header-cell *matHeaderCellDef>Message</mat-header-cell>
+                    <mat-cell *matCellDef="let data">{{data?.message | titlecase}}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="notes">
+                    <mat-header-cell *matHeaderCellDef>Notes</mat-header-cell>
+                    <mat-cell *matCellDef="let data">{{data?.notes | titlecase}}</mat-cell>
+                </ng-container>
                 <!-- <ng-container matColumnDef="toPercentage">
                     <mat-header-cell *matHeaderCellDef> To Percentage %</mat-header-cell>
                     <mat-cell *matCellDef="let data">{{data.toPercentage}}</mat-cell>
