--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -456,6 +456,7 @@ mat-header-row {
 	justify-content: center;
 	overflow: hidden;
 	position: relative;
+	border: 1px solid #dee2e6;
 	// cursor: pointer;
 
 	.fetched-image {
