--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -1237,7 +1237,7 @@
                                         Name</label>
                                 </div>
                                 <div class="col-7">
-                                    <input type="text" class="form-control" placeholder="" formControlName="spouseName"
+                                    <input type="text" class="form-control" placeholder="Name" formControlName="spouseName"
                                         value="{{ data.customerKycReview?.customerKycPersonal?.spouseName | titlecase }}"
                                         [class.isError]="customerKycPersonal.controls.spouseName.touched && customerKycPersonal.controls.spouseName.invalid" />
                                     <mat-error
