--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -156,14 +156,14 @@
                         </div>
                     </div>
 
-                    <div class="filtered-data" *ngIf="filteredList?.scrapCceStatus">
+                    <div class="filtered-data" *ngIf="filteredList?.scrapKycStatusFromCce">
                         <div class="filtered-title">By Scrap CCE Status</div>
                         <div class="d-flex">
                             <div class="filtered-value"
-                                *ngFor="let item of filteredList?.scrapCceStatus; let i = index;">
+                                *ngFor="let item of filteredList?.scrapKycStatusFromCce; let i = index;">
                                 <span>{{item?.name | titlecase}}</span>
                                 <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
-                                    (click)="clearFilter('scrapCceStatus',i)">
+                                    (click)="clearFilter('scrapKycStatusFromCce',i)">
                             </div>
                         </div>
                     </div>
