--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -116,9 +116,9 @@
                 </kt-multi-select-search>
               </div>
 
-              <!-- <div class="col">
+              <div class="col">
                 <label>By Scrap CCE Status</label>
-                <kt-multi-select-search formControlName="scrapCceStatus" [items]="approvalStatus.apprsiserOrCCE"
+                <kt-multi-select-search formControlName="scrapKycStatusFromCce" [items]="approvalStatus.apprsiserOrCCE"
                   [multiple]="true" [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'CCE Status'"
                   [searchable]="false">
                 </kt-multi-select-search>
@@ -130,7 +130,7 @@
                   [multiple]="true" [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'KYC Status'"
                   [searchable]="false">
                 </kt-multi-select-search>
-              </div> -->
+              </div>
 
               <div class="col-2 d-flex align-items-end">
                 <label></label>
