pkt-fe::packet tracking filter

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -235,9 +235,9 @@
             <div class="row">
               <div class="col-9">
                 <label>By Tracking Status</label>
-                <select class="form-control" formControlName="packetTracking">
+                <select class="form-control" formControlName="packetTrackingLocation">
                   <option value="" selected>All</option>
-                  <option value="inTransit">In Transit</option>
+                  <option value="in transit">In Transit</option>
                   <option value="incomplete">Incomplete</option>
                   <option value="complete">Complete</option>
                 </select>
